# hello-world

./: CMakeLists.txt  main.cpp
output/: main
output/main.dSYM/Contents/Resources/DWARF/: main
output/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
test/: bit_manipulation.h  cbms2008.h  pz_S018.h
test/AOJ/: AOJ0118.h  AOJ0121.h  AOJ0525.h  AOJ0558.h
test/POJ/: POJ1017.h  POJ1862.h  POJ1979.h  POJ2229.h  POJ2376.h  POJ2385.h  POJ2393.h  POJ2718.h  POJ3009.h  POJ3050.h  POJ3176.h  POJ3187.h  POJ3190.h  POJ3262.h  POJ3280.h  POJ3616.h
test/ac/: abc307_C.h  abc_306_E.h  ac303_f.h  ac90_008.h  ac90_009.h  ac90_012.h  ac90_013.h  ac90_018.h  ac90_020.h
