cmake_minimum_required(VERSION 3.23)
project(atcoder)

set(CMAKE_CXX_STANDARD 23)

add_executable(atcoder main.cpp test/pz_S018.h test/ac/ac90_018.h test/ac/ac90_020.h test/ac/ac303_f.h test/ac/ac90_008.h test/ac/ac90_009.h test/ac/ac90_012.h test/ac/ac90_013.h test/ac/abc_306_E.h test/ac/abc307_C.h test/bit_manipulation.h
        test/POJ/POJ1979.h
        test/POJ/POJ3009.h
        test/cbms2008.h
        test/AOJ/AOJ0118.h
        test/AOJ/AOJ0558.h
        test/POJ/POJ2718.h
        test/POJ/POJ3187.h
        test/POJ/POJ3050.h
        test/AOJ/AOJ0525.h
        test/POJ/POJ2376.h
        test/AOJ/AOJ0121.h
        test/POJ/POJ3190.h
        test/POJ/POJ2393.h
        test/POJ/POJ1017.h
        test/POJ/POJ1862.h
        test/POJ/POJ3262.h
        test/POJ/POJ3176.h
        test/POJ/POJ2229.h
        test/POJ/POJ2385.h
        test/POJ/POJ3616.h
        test/POJ/POJ3280.h)
